add_library(spiralsquare STATIC spiralsquare.hpp spiralsquare.cpp)
target_include_directories(spiralsquare PUBLIC ${CMAKE_CURRENT_LIST_DIR})
add_executable(advent03 advent03.cpp)
target_link_libraries(advent03 PUBLIC spiralsquare)

if(TARGET Catch)
    add_executable(spiralsquare_test spiralsquare.t.cpp)
    target_link_libraries(spiralsquare_test PUBLIC Catch spiralsquare)
    add_test(NAME TestAdvent03 COMMAND spiralsquare_test)
    enable_coverage(spiralsquare)
endif()
