add_library(disk_defrag STATIC disk_defrag.hpp disk_defrag.cpp)
target_include_directories(disk_defrag PUBLIC ${CMAKE_CURRENT_LIST_DIR})
if(NOT TARGET knot_hash)
    message(FATAL_ERROR "This challenge depends on knot hash from day 10")
endif()
target_link_libraries(disk_defrag knot_hash)
add_executable(advent14 advent14.cpp)
target_link_libraries(advent14 PUBLIC disk_defrag)

if(TARGET Catch)
    add_executable(disk_defrag_test disk_defrag.t.cpp)
    target_link_libraries(disk_defrag_test PUBLIC Catch disk_defrag)
    add_test(NAME TestAdvent14 COMMAND disk_defrag_test)
    enable_coverage(disk_defrag)
endif()
